# automake-project

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  autogen.sh  config.status  configure  configure.ac  configure.in
HelloWorld/: Makefile  Makefile.in
HelloWorld/.deps/: hello.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
fextend/: fextend
