#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])

AC_INIT([automake-demo], [0.1], [zren@suse.com])
AM_INIT_AUTOMAKE([-Wall -Werror])

AC_CONFIG_SRCDIR([HelloWorld/hello.c])


# Checks for programs.
AC_PROG_CC([gcc g++])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 HelloWorld/Makefile
])

AC_OUTPUT
